--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@typescript-eslint/parser": "^5.27.1",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
+    "cross-fetch": "^3.1.5",
     "eslint": "^8.17.0",
     "eslint-plugin-react": "^7.30.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "nock": "^13.2.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
     "ts-jest": "^28.0.4",
