--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cross-fetch": "^3.1.5",
     "eslint": "^8.17.0",
     "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "nock": "^13.2.7",
